# Projects-on-tensorflow

./: .gitignore  README.md  pyproject.toml  road_classification.py  utils.py  visual_pollution.py
Brain_tumor/: brain_tumor.py  helper.py  notebook.ipynb
Cifar10/: cifar10.py  helper.py  notebook.ipynb  test.py
Computer_vision/: README.md
Computer_vision/Brain_tumor/: brain_tumor.py
Computer_vision/Cifar10/: cifar10.py  helper.py  notebook.ipynb
Computer_vision/Road_classification/: helper.py  road_classification.py
Road_classification/: notebook.ipynb  road_classification.py
Visual_pollution/: helper.py  notebook.ipynb  visual_pollution.py
