[tool.poetry]
name = "tensorflow"
version = "0.1.0"
description = ""
authors = ["carnivore7777 <antgiannoulopoulos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
opencv-python = "^4.7.0.72"
scikit-learn = "^1.2.2"
opendatasets = "^0.1.22"
pydot = "^1.4.2"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
